<resources>

    <string name="app_name">myhealth</string>

    <string name="title1">가슴운동</string>
    <string name="place1">벤치프레스, 인클라인, 플라이</string>

    <string name="title2">등운동</string>
    <string name="place2">풀업, 렛플다운, 데드리프트</string>

    <string name="title3">하체운동</string>
    <string name="place3">스쿼트, 레그프레스, 레그익스텐션</string>

    <string name="title4">팔운동</string>
    <string name="place4">덤벨컬, 바벨컬, 해머컬</string>

    <string name="title5">어깨운동</string>
    <string name="place5">덤벨숄더프레스, 사이드레터럴레이즈, 오버럴레터럴레이즈</string>

    <string name="sub1_title1">바벨벤치프레스</string>
    <string name="sub1_place1">주운동 근육: 대흉근, 부운동 근육: 상완삼두근, 삼각근</string>
    <string name="sub1_picture1">s1_1</string>
    <string name="sub1_info1">방법\n 1. 어깨 너비보다 약간 넓게 바벨바를 잡으십시오.
        \n2. 오버 그립으로 바벨을 잡고 벤치에 누워 팔이 핍니다.
        \n3. 바벨을 아래로 가슴에 닿기전까지 내리면서 숨을 들이 마십니다.
        \n4. 팔꿈치가 완전히 펴질때까지 바벨을 올리리면서 숨을 내쉽니다.
    </string>
    <string name="sub1_tip1">자세 팁
        \n손목이 뒤로 꺽이지 않도록 손목을 고정시킵니다.
        \n바벨을 수직으로 움직입니다.
        \n운동중에 엉덩이를 들지 않습니다.
    </string>
    <string name="sub1_url1">"https://youtu.be/Et2yw2b5D4k"</string>


    <string name="sub1_title2">덤벨 인클라인</string>
    <string name="sub1_place2">주운동 근육: 소흉근(윗 가슴), 부운동 근육: 대흉근</string>
    <string name="sub1_picture2">s1_2</string>
    <string name="sub1_info2">방법\n 1. 벤치를 45도 각도로 기울입니다.
    \n 2. 덤벨을 어깨 높이로, 팔을 넓게, 팔꿈치를 바닥에 향하게하십시오.
    \n 3. 덤벨을 가슴 위로 들어 올리면 덤벨이 가슴 가까이에서 만나게됩니다.
    \n 4. 천천히 덤벨을 시작 위치로 되돌립니다.
    \n 5. 반복.

    </string>
    <string name="sub1_tip2">자세 팁
        \n반동을 사용하지 않고 천천히 운동합니다.
        \n덤벨을 수직으로 움직입니다.

    </string>
    <string name="sub1_url2">"https://youtu.be/FuButPvWEaY"</string>

    <string name="sub1_title3">덤벨 플라이</string>
    <string name="sub1_place3">주운동 근육: 대흉근. 부운동 근육: 전면 삼각근</string>
    <string name="sub1_picture3">s1_3</string>
    <string name="sub1_info3">방법\n 1. 팔꿈치를 약간 구부리고 손바닥이 서로 마주보게 덤벨을 잡고 벤치에 누워 팔을 올립니다.
    \n2. 팔꿈치에 약간의 굽힘을 유지하면서 덤벨을 바닥쪽으로 내리면서 숨을 들이 마십니다.
    \n3. 다시 팔을 올리면서 숨을 내쉽니다.
    </string>
    <string name="sub1_tip3">자세 팁
        \n이두근의 개입을 줄이기 위하여 반원을 그리는 동작에서 팔꿈치를 구부린 상태를 유지합니다.
    </string>
    <string name="sub1_url3">"https://youtu.be/HcDzxNNrSBo"</string>


    <string name="sub2_title1">풀업</string>
    <string name="sub2_place1">주운동 근육: 광배근, 대원근, 부운동 근육: 승모근 중하부, 능형근, 후면삼각근</string>
    <string name="sub2_picture1">s2_1</string>
    <string name="sub2_info1">방법\n 1. 어깨 너비로 팔을 뻗어 언더그립 또는 오버 그립으로 풀업바를 잡습니다.
    \n2. 풀업바가 가슴 위쪽에 닿을때까지 몸통을 당깁니다. 이때 숨을 내 뿜으십시오.
    \n3. 팔을 완전히 펴고 등이 완전히 펴질 때 숨을 들어 마십니다.
    \n4. 이 동작을 반복하십시오.
    </string>
    <string name="sub2_tip1">자세 팁
        \n일단 당신이 풀업바가 가슴 위쪽에 닿을때까지 몸통을 당겼을때, 등 근육을 짜내는 것에 집중하십시오.
        \n상체는 움직이지 않고 이두와 삼두만 움직여야합니다.
        \n전완근은 바를 잡는 것 외에 다른 작업을해서는 안됩니다.



    </string>
    <string name="sub2_url1">"https://youtu.be/cp6zC0Z9Vt8"</string>


    <string name="sub2_title2">렛풀다운</string>
    <string name="sub2_place2">주운동 근육: 광배근, 대원근, 부운동 근육:승모근 중하부, 능형근, 상완이두근</string>
    <string name="sub2_picture2">s2_2</string>
    <string name="sub2_info2">방법\n 1. 와이드 바가 장착 된 케이블 기계에 앉는다.
\n2. 손바닥이 앞으로 향하게하고 바를 잡으십시오.
\n3. 허리를 피고 바를 가슴 위쪽으로 당기며 상체를 약간 뒤로 젖힙니다.
\n4. 잠시 멈추고 바를 시작 위치로 되돌립니다.
\n5. 반복
    </string>
    <string name="sub2_tip2">자세 팁
        \n부상을 예방하기 위해등을 똑바로 펴십시오.
        \n등을 고정시키세요.
    </string>
    <string name="sub2_url2">"https://youtu.be/G11ySWVXA48"</string>

    <string name="sub2_title3">데드리프트</string>
    <string name="sub2_place3">주운동 근육: 척추기립근. 부운동 근육: 둔근, 슬굴곡근</string>
    <string name="sub2_picture3">s2_3</string>
    <string name="sub2_info3">방법\n 1. 2개의 덤벨을 잡고 팔을 어깨 너비만큼 벌립니다.
\n2. 허리를 펴고 무릎을 굽히십시오.
\n3. 손등을 앞으로 향하게 해서 덤벨을 잡으십시오.
\n4. 등으로 끌어당기는 느낌으로 일어납니다.
\n5. 무릎을 굽히고 허리를 앞으로 숙이면서 덤벨을 내립니다.
\n6. 시작 위치로 돌아갑니다.
\n7. 반복.
    </string>
    <string name="sub2_tip3">자세 팁
        \n허리가 말리지 않게 조심하세요.
        \n들어 올리기전에 숨을 들이 마쉬고, 코어에 힘을 주세요.
        \n 엉덩이와 허벅지에 힘을주어, 허리에 무리가지 않게해주세요.
    </string>
    <string name="sub2_url3">"https://youtu.be/XwybtFgfSRU"</string>

    <string name="sub3_title1">스쿼트</string>
    <string name="sub3_place1">주운동 근육: 대퇴사두근, 부운동 근육: 대두근, 슬굴곡근</string>
    <string name="sub3_picture1">s3_1</string>
    <string name="sub3_info1">방법\n 1. 바벨을 들어 올려 어깨에 올려 놓으십시오.
\n2. 무릎과 발가락이 약간 바깥 쪽을 향하게하여 어깨 너비보다 약간 넓게 서십시오.
\n3. 앉아있는 것처럼 무릎과 엉덩이를 구부리며 허리를 피고 천천히 내려갑니다 (쪼그리고 앉음).
\n4. 발가락을 움직이지 않고 몸을 버틸수있는 한 계속 내려가십시오.
\n5. 아래쪽 위치에서 멈추고 천천히 시작 위치로 되돌립니다.

    </string>
    <string name="sub3_tip1">자세 팁
        \n중량 없이 쪼그리고 앉는 자세를 연습하면 몸이 움직일 때 편안해집니다.
    </string>
    <string name="sub3_url1">"https://youtu.be/2hzbpTBA6vE"</string>

    <string name="sub3_title2">레그 프레스</string>
    <string name="sub3_place2">주운동 근육: 대퇴사두근, 부운동 근육: 대두근, 슬굴곡근</string>
    <string name="sub3_picture2">s3_2</string>
    <string name="sub3_info2">방법\n 1. 무릎을 약간 구부려 발이 편안하게 발판에 닿도록 기계의 자리를 조정하십시오.
\n2. 시작하려면 어깨 너비 자세로 발을 앞으로 밀고 안전 잠금 장치를 해제하십시오.
\n3. 천천히 몸쪽으로 중량을 낮추면서 숨을 들이 마시고 무릎을 발과 같은 방향으로 90도 각도로 움직이십시오.
\n4. 무릎 펴면서 숨을 내쉬고, 무릎을 완전히 펴지 마십시오.

    </string>
    <string name="sub3_tip2">자세 팁
        \n기구의 각도에 따라 쓰여지는 근육이 달라집니다.
    </string>
    <string name="sub3_url2">"https://youtu.be/hYwJrXpzEfs"</string>

    <string name="sub3_title3">레그 익스텐션</string>
    <string name="sub3_place3">주운동 근육: 대퇴사두근, 부운동 근육: 대두근, 슬굴곡근</string>
    <string name="sub3_picture3">s3_3</string>
    <string name="sub3_info3">방법\n 1. 무릎의 운동 범위가 넓고 머신이 발목 바로 위에 오도록 좌석을 조정하십시오.
\n2. 손으로 지지대를 잡고 엉덩이를 벤치에 붙입니다.
\n3. 다리를 천천히 펼치면 무릎이 곧게 펴지지만 무릎을 완전히 펴지 마십시오.
\n4. 잠시 동안 잡고 있다가 천천히 시작 위치로 돌아갑니다.

    </string>
    <string name="sub3_tip3">자세 팁
        \n중량에 집착하지말고, 자극을 느껴보세요.
    </string>
    <string name="sub3_url3">"https://youtu.be/BsNxEFKNLvY"</string>

    <string name="sub4_title1">덤벨컬</string>
    <string name="sub4_place1">주운동 근육: 이두근</string>
    <string name="sub4_picture1">s4_1</string>
    <string name="sub4_info1">방법\n 1. 패럴러 그립으로 덤벨을 잡고 벤치에 앉아 한쪽 팔을 내리고 숨을 들어 마십니다.
\n 2. 팔꿈치를 자신의 허벅지 안쪽에 대고 덤벨을 가슴쪽으로 올리면서 숨을 내쉽니다.
\n 3. 반복하고 반대 팔로 운동 하십시오.
    </string>
    <string name="sub4_tip1">자세 팁
        \n운동중인 팔을 제외한 신체 전체를 계속 움직이지 마십시오.
    </string>
    <string name="sub4_url1">"https://youtu.be/gFGV6OeRckU"</string>

    <string name="sub4_title2">바벨컬</string>
    <string name="sub4_place2">주운동 근육: 이두근</string>
    <string name="sub4_picture2">s4_2</string>
    <string name="sub4_info2">방법\n 1. 다리를 어깨 너비를 만큼 벌리고 무릎을 약간 구부리고 복근에 힘을줍니다.
\n 2. 팔을 약 12인치 정도 벌리십시오.
\n 3. 허벅지쪽으로 팔을 완전히 펴십시오.
\n 4. 팔꿈치를 똑바로 유지하면서 가슴쪽으로 바벨을 들어 올리십시오.
\n 5. 잠시 멈추고 시작 위치로 돌아갑니다.
    </string>
    <string name="sub4_tip2">자세 팁
        \n흔들리는 문제가 지속되면 벽이나 기둥에 기대어 수행하십시오.
    </string>
    <string name="sub4_url2">"https://youtu.be/A3AWaC2uKnU"</string>

    <string name="sub4_title3">해머컬</string>
    <string name="sub4_place3">주운동 근육: 이두근. 부운동 근육: 전완근</string>
    <string name="sub4_picture3">s4_3</string>
    <string name="sub4_info3">방법\n1. 어깨 너비로 다리를 벌리고 등을 공게 펴고, 패러럴 그립으로 덤벨을 잡고 숨을 들어 마십니다.
n\ 2. 팔을 들어 올리면서 숨을 내쉽니다.


    </string>
    <string name="sub4_tip3">자세 팁
        \n이 운동 중에는 손목을 고정하십시오.
    </string>
    <string name="sub4_url3">"https://youtu.be/Ge3_S7lRvfQ"</string>

    <string name="sub5_title1">덤벨숄더오버프레스</string>
    <string name="sub5_place1">주운동 근육: 삼각근, 부운동 근육: 상완삼두근, 삼각근</string>
    <string name="sub5_picture1">s5_1</string>
    <string name="sub5_info1">방법\n 1. 손바닥 안쪽을 몸쪽으로 향하게하고 양손에 덤벨을 듭니다.
\n 2. 다리를 어깨 넓이로 벌리고, 허리를 펴고, 무릎을 약간 구부리십시오.
\n 3. 팔꿈치를 약간 구부린 상태에서 팔을 어깨 높이까지 들어 올리십시오.
\n 4. 잠시 동안 자세를 유지 한 다음 천천히 팔을 시작 위치로 내립니다.
    </string>
    <string name="sub5_tip1">자세 팁
        \n부상을 방지하기 위해 허리가 아치형이 되지 않도록 올바른 자세를 유지하십시오.
  \n손목을 약간 회전시키며 덤벨을 들면 삼각근을 더욱 자극 할 수 있습니다.
  \n수평 이상으로 팔을 들어 올리면 승모근의 개입이 증가합니다.

    </string>
    <string name="sub5_url1">"https://youtu.be/8DByXGrk4Ps"</string>

    <string name="sub5_title2">덤벨사이드레터럴레이즈</string>
    <string name="sub5_place2">주운동 근육: 측면 삼각근, 부운동 근육: 삼각근</string>
    <string name="sub5_picture2">s5_2</string>
    <string name="sub5_info2">방법\n 1. 손바닥 안쪽을 몸쪽으로 향하게하고 양손에 덤벨을 듭니다.
\n2. 다리를 어깨 넓이로 벌리고, 허리를 펴고, 무릎을 약간 구부리십시오.
\n3. 팔꿈치를 약간 구부린 상태에서 팔을 어깨 높이까지 들어 올리십시오.
\n4. 잠시 동안 자세를 유지 한 다음 천천히 팔을 시작 위치로 내립니다.
    </string>
    <string name="sub5_tip2">자세 팁
      \n부상을 방지하기 위해 허리가 아치형이 되지 않도록 올바른 자세를 유지하십시오.
  \n손목을 약간 회전시키며 덤벨을 들면 삼각근을 더욱 자극 할 수 있습니다.
  \n수평 이상으로 팔을 들어 올리면 승모근의 개입이 증가합니다.
    </string>
    <string name="sub5_url2">"https://youtu.be/dE5be4sTjxM"</string>

    <string name="sub5_title3">덤벨 오버레터럴레이즈</string>
    <string name="sub5_place3">주운동 근육: 전면 삼각근. 부운동 근육: 삼각근</string>
    <string name="sub5_picture3">s5_3</string>
    <string name="sub5_info3">방법\n1. 1. 이운동을 안정시키기 위해 이마를 벤치에 올려 놓고 허리를 핍니다.
\n2. 팔을 똑바르게하고 팔꿈치를 약간 구부린 상태에서 팔을 쭉펴지 않도록하십시오.
\n3. 천천히 덤벨을 어깨 높이까지 올리십시오.
\n4. 잠시 멈추고 시작 위치로 돌아갑니다.
\n5. 반복.

    </string>
    <string name="sub5_tip3">자세 팁
        \n운동 중에 바닥과 평행하게 등을 맞춥니다.

    </string>
    <string name="sub5_url3">"https://youtu.be/ApN4D31ogVg"</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>


</resources>
