<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin" >


        <LinearLayout
            android:id="@+id/video1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/shape_list"
            android:clickable="true"
            android:onClick="play"
            android:orientation="horizontal"
            android:tag="1">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_weight="2"
                android:adjustViewBounds="true"
                android:paddingRight="5sp"
                android:src="@drawable/s3_1" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="91dp"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/sub3_title1"
                    android:textSize="20sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/sub3_place1" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/video2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/shape_list"
            android:clickable="true"
            android:onClick="play"
            android:orientation="horizontal"
            android:tag="2">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_weight="2"
                android:adjustViewBounds="true"
                android:paddingRight="5sp"
                android:src="@drawable/s3_2" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/sub3_title2"
                    android:textSize="20sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/sub3_place2" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/video3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/shape_list"
            android:clickable="true"
            android:onClick="play"
            android:orientation="horizontal"
            android:tag="3">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_weight="2"
                android:adjustViewBounds="true"
                android:paddingRight="5sp"
                android:src="@drawable/s3_3" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/sub3_title3"
                    android:textSize="20sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/sub3_place3" />
            </LinearLayout>
        </LinearLayout>





    </LinearLayout>
</ScrollView>