<?xml version="1.0" encoding="utf-8"?>
<TabHost xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/tabHost"
    android:layout_height="match_parent"
    android:layout_width="match_parent">

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <FrameLayout
            android:id="@android:id/tabcontent"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <ScrollView
                android:id="@+id/tab1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fillViewport="true">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:paddingLeft="@dimen/activity_horizontal_margin"
                    android:paddingTop="@dimen/activity_vertical_margin"
                    android:paddingRight="@dimen/activity_horizontal_margin"
                    android:paddingBottom="@dimen/activity_vertical_margin">


                    <LinearLayout
                        android:id="@+id/video1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/shape_list"
                        android:clickable="true"
                        android:onClick="sub1"
                        android:orientation="horizontal"
                        android:tag="1">

                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="100dp"
                            android:layout_weight="2"
                            android:adjustViewBounds="true"
                            android:paddingRight="5sp"
                            android:src="@drawable/i1" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="91dp"
                            android:layout_weight="1"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/title1"
                                android:textSize="20sp" />

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/place1" />
                        </LinearLayout>
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/video2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/shape_list"
                        android:clickable="true"
                        android:onClick="sub2"
                        android:orientation="horizontal"
                        android:tag="2">

                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="100dp"
                            android:layout_weight="2"
                            android:adjustViewBounds="true"
                            android:paddingRight="5sp"
                            android:src="@drawable/i2" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/title2"
                                android:textSize="20sp" />

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/place2" />
                        </LinearLayout>
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/video3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/shape_list"
                        android:clickable="true"
                        android:onClick="sub3"
                        android:orientation="horizontal"
                        android:tag="3">

                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="100dp"
                            android:layout_weight="2"
                            android:adjustViewBounds="true"
                            android:paddingRight="5sp"
                            android:src="@drawable/i3" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/title3"
                                android:textSize="20sp" />

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/place3" />
                        </LinearLayout>
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/video4"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/shape_list"
                        android:clickable="true"
                        android:onClick="sub4"
                        android:orientation="horizontal"
                        android:tag="4">

                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="100dp"
                            android:layout_weight="2"
                            android:adjustViewBounds="true"
                            android:paddingRight="5sp"
                            android:src="@drawable/i4" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="91dp"
                            android:layout_weight="1"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/title4"
                                android:textSize="20sp" />

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/place4" />
                        </LinearLayout>
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/video5"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/shape_list"
                        android:clickable="true"
                        android:onClick="sub5"
                        android:orientation="horizontal"
                        android:tag="5">

                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="100dp"
                            android:layout_weight="2"
                            android:adjustViewBounds="true"
                            android:paddingRight="5sp"
                            android:src="@drawable/i5" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="91dp"
                            android:layout_weight="1"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/title5"
                                android:textSize="20sp" />

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/place5" />
                        </LinearLayout>
                    </LinearLayout>


                </LinearLayout>
            </ScrollView>

            <ScrollView
                android:id="@+id/tab2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#858383"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="30dp"
                    android:background="#FDFDFD"
                    android:orientation="vertical"
                    android:padding="20dp">

                    <TextView
                        android:id="@+id/textView2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="20dp"
                        android:text="키와 몸무게를 입력하세요" />

                    <TextView
                        android:id="@+id/textView3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:text="키(cm)"
                        android:textSize="20dp" />

                    <EditText
                        android:id="@+id/etheight"
                        android:layout_width="match_parent"
                        android:layout_height="30dp"
                        android:layout_marginBottom="20dp"
                        android:background="#DFDEDC"
                        android:ems="10"
                        android:inputType="number" />

                    <TextView
                        android:id="@+id/textView4"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:text="체중(kg)"
                        android:textSize="20dp" />

                    <EditText
                        android:id="@+id/etweight"
                        android:layout_width="match_parent"
                        android:layout_height="30dp"
                        android:layout_marginBottom="20dp"
                        android:background="#DCDBDA"
                        android:ems="10"
                        android:inputType="number" />

                    <Button
                        android:id="@+id/bmibutton"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="20dp"
                        android:background="#BABAB9"
                        android:onClick="bmilistener"
                        android:text="BMI 계산 결과"
                        android:textColor="#ffffff" />

                    <TextView
                        android:id="@+id/tvbmires"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="결과가 없습니다."
                        android:textSize="20dp" />
                </LinearLayout>
            </ScrollView>

            <ScrollView
                android:id="@+id/tab3"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:fillViewport="true">
               <LinearLayout
                   android:layout_width="match_parent"
                   android:layout_height="match_parent"

                   android:background="#FDFDFD"
                   android:orientation="vertical"
                   >
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="fill_horizontal"
                    android:gravity="center_horizontal"
                    android:orientation="vertical">

                    <DatePicker
                        android:id="@+id/datePicker"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:padding="5sp">


                    <TextView
                        android:id="@+id/viewDatePick"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="#DDDDDD"
                        android:gravity="center"
                        android:text=""
                        android:textStyle="bold" />

                    <EditText
                        android:id="@+id/edtDiary"
                        android:layout_width="match_parent"
                        android:layout_height="80sp"
                        android:background="#DDDDDD"
                        android:ems="10"
                        android:gravity="start|center_vertical"
                        android:inputType="text|textMultiLine|textCapSentences"
                        android:padding="7sp"
                        android:text="" />

                    <Button
                        android:id="@+id/btnSave"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="새 일기 저장" />
                </LinearLayout>
</LinearLayout>

            </ScrollView>
        </FrameLayout>

        <TabWidget
            android:id="@android:id/tabs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"></TabWidget>
    </LinearLayout>
</TabHost>